--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
 		"bcrypt": "^5.0.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-validator": "^6.7.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.15",
 		"nodemon": "^2.0.6"
