--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.0.1",
 		"html-webpack-plugin": "^4.5.0",
+		"react-redux": "^7.2.2",
+		"redux": "^4.0.5",
 		"style-loader": "^2.0.0",
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0",
