--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"@babel/core": "^7.12.9",
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
+		"axios": "^0.21.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.0.1",
 		"html-webpack-plugin": "^4.5.0",
