add links router and support creating a link

--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
 		"mongoose": "^5.10.15",
-		"nodemon": "^2.0.6"
+		"nodemon": "^2.0.6",
+		"shortid": "^2.2.16"
 	}
 }
