--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.2",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1"
+		"react-dom": "^17.0.1",
+		"redux-thunk": "^2.3.0"
 	}
 }
