--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
 		"@material-ui/core": "^4.11.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"redux-thunk": "^2.3.0"
 	}
 }
