--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,7 @@
 		"html-webpack-plugin": "^4.5.0",
 		"react-redux": "^7.2.2",
 		"redux": "^4.0.5",
-		"style-loader": "^2.0.0",
-		"webpack": "^5.10.0",
-		"webpack-cli": "^4.2.0",
-		"webpack-dev-server": "^3.11.0"
+		"style-loader": "^2.0.0"
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.11.2",
@@ -32,6 +29,9 @@
 		"react-dom": "^17.0.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"webpack": "^5.10.0",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^3.11.0"
 	}
 }
