--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,16 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
+	"dependencies": {
+		"@material-ui/core": "^4.11.2",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
+		"redux-thunk": "^2.3.0",
+		"webpack": "^5.10.0",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^3.11.0",
 		"@babel/core": "^7.12.9",
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
@@ -22,16 +31,5 @@
 		"react-redux": "^7.2.2",
 		"redux": "^4.0.5",
 		"style-loader": "^2.0.0"
-	},
-	"dependencies": {
-		"@material-ui/core": "^4.11.2",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-router": "^5.2.0",
-		"react-router-dom": "^5.2.0",
-		"redux-thunk": "^2.3.0",
-		"webpack": "^5.10.0",
-		"webpack-cli": "^4.2.0",
-		"webpack-dev-server": "^3.11.0"
 	}
 }
