trigger heroku deploy

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
 		"build": "webpack --mode production"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "tjuranek",
 	"license": "ISC",
 	"dependencies": {
 		"@material-ui/core": "^4.11.2",
