--- a/client/package.json
+++ b/client/package.json
@@ -5,31 +5,34 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "webpack --mode development",
-		"start": "webpack serve",
+		"start-dev": "webpack serve",
+		"start": "node server.js",
+		"heroku-potbuild": "webpack -p",
 		"build": "webpack --mode production"
 	},
 	"keywords": [],
 	"author": "tjuranek",
 	"license": "ISC",
 	"dependencies": {
-		"@material-ui/core": "^4.11.2",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-router": "^5.2.0",
-		"react-router-dom": "^5.2.0",
-		"redux-thunk": "^2.3.0",
-		"webpack": "^5.10.0",
-		"webpack-cli": "^4.2.0",
-		"webpack-dev-server": "^3.11.0",
 		"@babel/core": "^7.12.9",
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
+		"@material-ui/core": "^4.11.2",
 		"axios": "^0.21.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.0.1",
+		"express": "^4.17.1",
 		"html-webpack-plugin": "^4.5.0",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
-		"style-loader": "^2.0.0"
+		"redux-thunk": "^2.3.0",
+		"style-loader": "^2.0.0",
+		"webpack": "^5.10.0",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^3.11.0"
 	}
 }
