--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
 		"dotenv-webpack": "^6.0.0",
 		"express": "^4.17.1",
 		"html-webpack-plugin": "^4.5.0",
+		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
