--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
 		"css-loader": "^5.0.1",
 		"dotenv-webpack": "^6.0.0",
 		"express": "^4.17.1",
+		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^4.5.0",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
@@ -31,6 +32,7 @@
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"style-loader": "^2.0.0",
+		"ttf-loader": "^1.0.2",
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0"
