--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
 		"@material-ui/core": "^4.11.2",
+		"@material-ui/icons": "^4.11.2",
 		"axios": "^0.21.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.0.1",
