--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"@babel/preset-react": "^7.12.7",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
+		"apexcharts": "^3.23.1",
 		"axios": "^0.21.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.0.1",
@@ -26,6 +27,7 @@
 		"html-webpack-plugin": "^4.5.0",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
+		"react-apexcharts": "^1.3.7",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
 		"react-router": "^5.2.0",
